<?xml version="1.0"?>
<package format="2">
  <name>kalman</name>
  <version>0.1.0</version>
  <description>A Kalman filter library</description>

  <maintainer email="todo@todo.com">Markus Herb</maintainer>

  <author>Markus Herb</author>

  <license>MIT</license>

  <url type="repository">https://github.com/mherb/kalman</url>
  <url type="bugtracker">https://github.com/mherb/kalman/issues</url>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
